# pad_dataset_registry

./: .gitignore  CONTRIBUTING.md  README.md  _config.yml  how-to-add-a-dataset.md  index.md  pipeline_overview.md  pipeline_template.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: .gitignore  config
.github/workflows/: build-and-deploy.yml
_data/: catalog.json
_scripts/: requirements.txt  validate_croissant.py
api/: catalog.json
api/datasets/: FHI2020_Stratified_Sampling.json  FHI360_Subset_PADFusion_v2.0.json  Leiberman-Lab_ChemoPADPLStraining2026_Annotated_v1.0.json
assets/css/: readme-styles.css  style.scss
datasets/: .gitignore  CRSTest_dataset.dvc  FHI2020_Stratified_Sampling.dvc  MHS-Tanzania.dvc  README.md  model_dataset_mapping.csv
datasets/CRSTest_dataset/: metadata.yaml
datasets/ChemoPAD_idPAD_2.4_Veripad/: metadata_test.csv  projects.csv
datasets/FHI2020_2022_Mid_Good/: metadata_dev.csv  projects.csv
datasets/FHI2020_Mid_Good_v1/: metadata_test.csv  projects.csv
datasets/FHI2020_Stratified_Sampling/: .gitignore  FHI2020_Stratified_Sampling.dvc  FHI2020_Stratified_Sampling_croissant.jsonld  README.md  dev_images.dvc  dev_set.csv  dev_set.csv.dvc  images.dvc  index.md  metadata.yaml  metadata.yaml.dvc  metadata_dev.csv  metadata_dev.csv.dvc  metadata_test.csv  metadata_test.csv.dvc  report.dvc  test_images.dvc  test_set.csv.dvc
datasets/FHI2021/: FHI2021_dataset.csv  croissant.jsonld
datasets/FHI2022/: croissant.jsonld  index.md
datasets/FHI360_2020_Balanced/: labels.csv  metadata_val.csv
datasets/FHI360_FHI2020-FHI2022_MidTrainingSet-Good_v1.0/: metadata_test.csv
datasets/FHI360_FHI2020-FHI2022_MidTrainingSet_Good_v1.0/: croissant.jsonld  labels.csv
datasets/FHI360_FHI2020_MidTrainingSet-Good-Zero_v1.1/: metadata_dev.csv  projects.csv
datasets/FHI360_FHI2020_MidTrainingSet-Zero_Good_v1.1/: index.md  labels.csv  metadata_test.csv
datasets/FHI360_FHI2020_MidTrainingSet_Good_v1.0/: metadata_dev.csv
datasets/FHI360_FHI360-FHI2020_BalancedData_v1.0/: metadata_dev.csv  metadata_test.csv  projects.csv
datasets/FHI360_Subset_PADFusion_v1.0/: README.md  class_distribution.csv  croissant.jsonld  labels.csv  metadata_dev.csv  metadata_test.csv  metadata_val.csv
datasets/FHI360_Subset_PADFusion_v2.0/: README.md  class_distribution.csv  dataset_sizes.md  (+6 more)
docs/: .gitignore  Gemfile  README.md  SETUP.md  _config.yml  datasets.md  how-to-add-a-dataset.md  index.md  test.html
examples/: README.md  build_registry_plots.py  build_registry_release.py
gcolab_instructions/: PADs__get_dataset_with_processed_RGB.ipynb  README.md  get_dataset.ipynb
nbs/: .gitignore  COMP_dataset_FHI_2020_strat_sampling_with_distractors.ipynb  EXP_project-FHI2020-id-11.ipynb  PIPELINE_dataset_FHI_2020_strat_sampling.ipynb  PREP_FHI_2020_data.ipynb  create_dataset_FHI_2020_strat_sampling.ipynb  exploration_project-FHI2022-id-12.ipynb  exploration_project-FHI360-id-13.ipynb
src/: croissant-generator-full.py  croissant-generator.py  utils.py
(+82 files in other folders)
