[project]
name = ""
version = ""
description = ""
authors = [
    {name = "psaboia", email = "psaboiawork@gmail.com"},
]
dependencies = [
    "certifi==2022.12.7",
    "charset-normalizer==3.1.0",
    "idna==3.4",
    "numpy==1.24.2",
    "pandas==1.5.3",
    "Pillow==9.5.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "requests==2.28.2",
    "six==1.16.0",
    "urllib3==1.26.15",
    "jupyter>=1.0.0",
    "python-dotenv>=1.0.0",
    "imagehash>=4.3.1",
    "aiohttp>=3.9.1",
    "pyarrow>=14.0.1",
    "scikit-learn>=1.3.2",
    "ipyplot>=1.1.1",
    "grequests>=0.7.0",
    "seaborn>=0.13.1",
    "dvc>=3.44.0",
    "dvc-gdrive>=3.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
