[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pad-dataset-registry"
version = "0.1.0"
description = "PADs Dataset Registry serves to plan and create datasets for PAD projects using PAD API."
authors = [
    {name = "Priscila Saboia Moreira", email = "pmoreira@nd.edu"},
]
requires-python = " >=3.10.0,<3.10.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pandas",
    "requests",
    "urllib3",
    "python-dotenv",
    "imagehash",
    "scikit-learn",
    "grequests",
    "seaborn",
    "dvc",
    "dvc-gdrive",
    "jupyterlab",
    "ipyplot==1.1.1",
    "opencv-python>=4.9.0.80",
    "tdqm>=0.0.1",
    "tqdm>=4.66.2",
    "scipy>=1.12.0",
    "ipywidgets>=8.1.2",
    "openpyxl>=3.1.2",
    "openai>=1.23.2",
    "python-Levenshtein>=0.25.1",
    "tensorflow[and-cuda]==2.14",
    "plotly>=5.24.1",
    "chart-studio>=1.1.0",
]

[project.urls]
Homepage = "https://pad.crc.nd.edu/"
Repository = "https://github.com/PaperAnalyticalDeviceND/pad_dataset_registry"
Documentation = "https://github.com/PaperAnalyticalDeviceND/pad_dataset_registry/tree/main/docs"